examples/valid/program79.c
int multiply_three(int a, int b, int c) {
    return a * b * c;
}

int main(void) {
    return multiply_three(2, 3, 4);
}

