examples/invalid/program45.c
int f(int a) {
    return a;
}

int main(void) {
    int x;
    x = f(1, 2, 3, 4);
    return x;
}

